; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_tl_parse_local_id.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-engine.c_tl_parse_local_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_ERROR_BAD_VALUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Local id must be positive integer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_parse_local_id() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @tl_fetch_int()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp sle i32 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @TL_ERROR_BAD_VALUE, align 4
  %8 = call i32 @tl_fetch_set_error_format(i32 %7, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %11

9:                                                ; preds = %0
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %9, %6
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @tl_fetch_int(...) #1

declare dso_local i32 @tl_fetch_set_error_format(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
